# neurocore

./: .gitignore  1.txt  2026-06-19 19-37-52.txt  Cargo.toml  contents.txt  glossary.md  merge_rust_code_smart.py  merged_neurocore_code_part1.txt  merged_neurocore_code_part2.txt  merged_neurocore_code_part3.txt  run_all_examples.bat  run_cargo_build.bat  rust-toolchain.toml  start_merge_rust_code_smart.bat
examples/: autoencoder.rs  autoencoder2d.rs  autoencoder3d.rs  autoencoder4d.rs  autoencoder5d.rs  classifier.rs  classifier2d.rs  classifier3d.rs  classifier4d.rs  classifier5d.rs  dim_change_test.rs  expand_dim_example.rs  graph_full.rs  graph_model.rs  identity_example.rs  leaky_relu_example.rs  linear2d_test.rs  linear3d_test.rs  linear4d_test.rs  linear5d_test.rs  linear_test.rs  loss2d_test.rs  loss3d_test.rs  loss4d_test.rs  loss5d_test.rs  loss_test.rs  memory_example.rs  reduce_dim_example.rs  soft_keep_gate_example.rs  soft_sparse_gate_example.rs
examples_large/: mnist_binary_32x32.rs
src/: lib.rs  parameter.rs
src/compute_manager/: device.rs  dim_change.rs  executor.rs  mod.rs
src/dispatchers/: mod.rs
src/jacobian/: jacobian1d.rs  jacobian2d.rs  jacobian3d.rs  jacobian4d.rs  jacobian5d.rs  mod.rs
src/layers/: context1d.rs  context2d.rs  context3d.rs  context4d.rs  mod.rs
src/linalg/: mod.rs
src/logging/: logger.rs  mod.rs
src/loss/: common.rs  mod.rs
src/loss_plan/: blueprint.rs  chain.rs  cross_entropy.rs  cubes.rs  desc.rs  execution.rs  expr.rs  mod.rs  plan.rs
src/model_plan/: blueprint.rs  builder.rs  dim.rs  layer_desc.rs  mod.rs  (+3 more)
(+210 files in other folders)
