[package]
name = "neurocore"
version = "0.1.0"
edition = "2021"

[dependencies]
# faer без rayon – мы управляем параллелизмом сами
faer = { version = "0.24.0", default-features = false, features = ["std"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[[example]]
name = "mnist_binary_32x32"
path = "examples_large/mnist_binary_32x32.rs"